--- a/project2/templates/layout.html
+++ b/project2/templates/layout.html
@@ -5,16 +5,15 @@
 		<title>{% block title %}{{ title }}{% endblock %}</title>
 
 		<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    	<!-- Bootstrap CSS -->
-    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<link rel="stylesheet" type="text/css" href="static/main.css">
 
 		<script src="{{ js_file }}"></script>
 	</head>
 
 	<body>
+		{% block heading %}{% endblock %}
+
 		{% with messages = get_flashed_messages(with_categories=true) %}
 			{% if messages %}
 				{% for categories, message in messages %}
