--- a/project2/templates/home.html
+++ b/project2/templates/home.html
@@ -5,7 +5,7 @@
 		<img class="logo" src="static/logo.png" width="120px">
 		<nav>
 			<ul class="nav-links">
-				<li><a href="{{ url_for('home') }}">Home</a></li>
+				<li><a class="active" href="{{ url_for('home') }}">Home</a></li>
 				<li><a href="{{ url_for('myChannels') }}">My Channels</a></li>
 			</ul>
 		</nav>
@@ -15,5 +15,7 @@
 {% endblock %}
 
 {% block body %}
-	Body, herllo
+<main class="container">
+		<p>Hello</p>
+</main>
 {% endblock %}
