--- a/project2/templates/layout.html
+++ b/project2/templates/layout.html
@@ -17,7 +17,7 @@
 		{% with messages = get_flashed_messages(with_categories=true) %}
 			{% if messages %}
 				{% for categories, message in messages %}
-					<div class="alert alert-{{ category }}">
+					<div class="alert alert-{{ categories }}">
 						{{ message }}
 					</div>
 				{% endfor %}
