--- a/project2/templates/layout.html
+++ b/project2/templates/layout.html
@@ -8,6 +8,8 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<link rel="stylesheet" type="text/css" href="static/main.css">
 
+    	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+
 		<script src="{{ js_file }}"></script>
 	</head>
 
