--- a/project2/static/main.css
+++ b/project2/static/main.css
@@ -91,7 +91,7 @@ button {
 }
 
 button:hover {
-	background-color: rgba(0, 136, 169, 0.7);
+	background-color: rgba(0, 126, 169, 0.7);
 }
 
 .main {
@@ -107,13 +107,43 @@ button:hover {
 	box-shadow: 0px 11px 35px 2px rgba(0,0,0,0.25);
 }
 
+.channel-form {
+	background-color: rgba(0, 0, 0, 0.7);
+	margin: 25px auto;
+	width: 500px;
+	height: 400px;
+	border-radius: 0.5em;
+	border: 1px solid;
+	border-color: rgba(0, 126, 169, 0);
+	box-shadow: 4px 4px 4px 4px rgba(0, 126, 169, 0.24);
+}
+
+.spacer {
+	margin-left: 10px;
+}
+
+.text-white {
+	color: #ffffff;
+	font-size: 14px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.select-field {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 5px;
+}
+
+
 .sign {
 	padding-top: 30px;
 	padding-bottom: 40px;
 	color: #ebebeb;
 	font-family: "Montserrat", sans-serif;
 	font-weight: bold;
-	font-size: 23px;
+	font-size: 24px;
 }
 
 .un {
@@ -134,6 +164,22 @@ button:hover {
     text-align: center;
     margin-bottom: 27px;
     font-family: 'Montserrat', sans-serif;
+}
+
+.cn {
+	width: 76%;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	font-weight: 500;
+	margin-bottom: 27px;
+	margin-left: 52px;
+	text-align: center;
+	box-sizing: border-box;
+	padding: 10px 25px 10px 15px;
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	border-radius: 15px;
+	background-color: rgba(255, 255, 255, 0.8);
+
 }
 
 form.form1 {
@@ -160,6 +206,32 @@ form.form1 {
 
 .register-btn:hover {
 	background-color: rgba(235, 164, 52, 0.8);
+}
+
+.create-btn {
+	cursor: pointer;
+	border-radius: 15px;
+	background-color: rgba(0, 126, 169, 1);
+	font-family: 'Montserrat', sans-serif;
+	padding: 10px 40px 10px 40px;
+	margin-top: 15%;
+	margin-left: 31%;
+	color: #ffffff;
+	border: 0;
+	font-size: 15px;
+	padding-top: 13px;
+	padding-bottom: 13px;
+}
+.form-section {
+	margin-top: 25px;
+}
+
+.bool {
+	margin-left: 10%;
+}
+
+.create-btn:hover {
+	background-color: rgba(0, 126, 169, 0.7);
 }
 
 .pass {
