--- a/project2/static/main.css
+++ b/project2/static/main.css
@@ -18,7 +18,7 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	padding: 10px 10%;
+	padding: 10px 3%;
 	background-color: #0a0a0a;
 }
 
@@ -27,14 +27,12 @@ body {
 }
 
 .container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-left: 18%;
-	margin-right: 18%;
+	margin-left: 20%;
+	margin-right: 20%;
 	margin-top: 20px;
-	height: 100%;
-	background-color: #ffffff;
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 4px;
+	padding: 5px 5px 1px 5px;
 }
 
 .logo {
@@ -65,6 +63,7 @@ body {
 
 .accent-btn {
 	background-color: rgba(235, 164, 52, 1);
+	margin-left: 115px;
 }
 
 .accent-btn:hover {
@@ -118,14 +117,36 @@ button:hover {
 	box-shadow: 4px 4px 4px 4px rgba(0, 126, 169, 0.24);
 }
 
-.spacer {
+.channel-title {
+	font-size: 18px;
+	color: rgba(255, 255, 255, 1);
+}
+
+.spacer-sm {
 	margin-left: 10px;
+}
+
+.spacer-lg {
+	margin-left: 40px;
 }
 
 .text-white {
 	color: #ffffff;
 	font-size: 14px;
 	font-family: 'Montserrat', sans-serif;
+}
+
+.text-secondary {
+	font-size: 12px;
+	color: #ffffff;
+}
+
+.border-btm {
+	border-bottom: 2px solid;
+	border-color: rgba(0, 126, 169, 1);
+	padding-bottom: 4px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .select-field {
@@ -285,6 +306,17 @@ form.form1 {
     padding-top: 15px;
 }
 
+.channel-item {
+	border-radius: 3px;
+	border-color: rgba(0, 0, 0, 1);
+	border: 1px solid;
+	background-color: rgba(10, 10, 10, 0.95);
+	font-family: 'Montserrat', sans-serif;
+	padding-top: 10px;
+	padding-bottom: 40px;
+	margin-bottom: 10px;
+}
+
 .alert {
 	font-family: "Montserrat", sans-serif;
 	padding-top: 10px;
@@ -294,7 +326,7 @@ form.form1 {
 }
 
 .alert-danger {
-	color: "red";
+	background-color: "red";
 }
 
 
