--- a/project2/templates/newChannel.html
+++ b/project2/templates/newChannel.html
@@ -7,10 +7,10 @@
 			<ul class="nav-links">
 				<li><a href="{{ url_for('home') }}">Home</a></li>
 				<li><a href="{{ url_for('myChannels') }}">My Channels</a></li>
+				<li><a href="{{ url_for('newChannel') }}">Create Channel</a></li>
+				<li><a href="{{ url_for('logout') }}">Logout</a></li>
 			</ul>
 		</nav>
-		<a href="{{ url_for('newChannel') }}"><button>New Channel</button></a>
-		<a href="{{ url_for('logout') }}"><button class="accent-btn">Logout</button></a>
 	</header>
 {% endblock %}
 
