--- a/project2/static/main.css
+++ b/project2/static/main.css
@@ -19,18 +19,21 @@ header {
 	justify-content: flex-end;
 	align-items: center;
 	padding: 10px 3%;
-	background-color: #0a0a0a;
+	background-color: rgba(255, 255, 255, 0);
+	margin-bottom: 20px;
+	box-shadow: 1px 1px 3px 1px rgba(30, 30, 30, 0.25); 
 }
 
 body {
-	background-color: rgba(36, 37, 42, 0.9);
+	background-color: #4158D0;
+	background-image: linear-gradient(to right, #aa4b6b, #6b6b83, #3b8d99);
 }
 
 .container {
 	margin-left: 20%;
 	margin-right: 20%;
 	margin-top: 20px;
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: ;
 	border-radius: 4px;
 	padding: 5px 5px 1px 5px;
 }
@@ -64,6 +67,16 @@ body {
 .accent-btn {
 	background-color: rgba(235, 164, 52, 1);
 	margin-left: 115px;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 500;
+	font-size: 14px;
+	color: #edf0f1;
+	text-decoration: none;
+	border: none;
+	border-radius: 50px;
+	cursor: pointer;
+	transition: all 0.3s ease 0s;
+	padding: 9px 20px;
 }
 
 .accent-btn:hover {
@@ -79,14 +92,14 @@ body {
 	padding-bottom: 2px;
 }
 
-button {
+.main-btn {
 	padding: 9px 20px;
 	background-color: rgba(0, 126, 169, 1);
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
 	transition: all 0.3s ease 0s;
-	margin-left: 20px
+	margin-left: 20px;
 }
 
 button:hover {
@@ -119,7 +132,7 @@ button:hover {
 
 .channel-title {
 	font-size: 18px;
-	color: rgba(255, 255, 255, 1);
+	color: rgba(0, 0, 0, 1);
 }
 
 .spacer-sm {
@@ -128,6 +141,7 @@ button:hover {
 
 .spacer-lg {
 	margin-left: 40px;
+	float: right;
 }
 
 .text-white {
@@ -138,11 +152,11 @@ button:hover {
 
 .text-secondary {
 	font-size: 12px;
-	color: #ffffff;
+	color: rgba(0, 0, 0, 1);
 }
 
 .border-btm {
-	border-bottom: 2px solid;
+	border-bottom: 1px solid;
 	border-color: rgba(0, 126, 169, 1);
 	padding-bottom: 4px;
 	margin-left: 10px;
@@ -307,14 +321,20 @@ form.form1 {
 }
 
 .channel-item {
-	border-radius: 3px;
-	border-color: rgba(0, 0, 0, 1);
-	border: 1px solid;
-	background-color: rgba(10, 10, 10, 0.95);
+	cursor: pointer;
+	border-radius: 4px;
+	background-color: rgba(235, 235, 235, 1);
 	font-family: 'Montserrat', sans-serif;
+	margin-left: 20%;
+	margin-right: 20%;
+	margin-bottom: 1px;
 	padding-top: 10px;
 	padding-bottom: 70px;
-	margin-bottom: 10px;
+	transition: all 0.8s;
+}
+
+.channel-item:hover {
+	transform: scale(1.05);
 }
 
 .alert {
@@ -328,7 +348,6 @@ form.form1 {
 .alert-danger {
 	background-color: "red";
 }
-
 
 @media (max-width: 600px) {
 	.main {
