--- a/project2/templates/home.html
+++ b/project2/templates/home.html
@@ -25,8 +25,13 @@
 		</header>
 
 		<main>
-			<div id="channels">
-				
+			<div class="side-bar">
+				<p>this is where my side bar will godsfadsfa dsfasdfa</p>
+			</div>
+			<div class="search-bar" align="center">
+				<input class="search-input" placeholder="Search Channels" align="center" type="text" name="search">
+			</div>
+			<div id="channels" class="channels">
 			</div>
 		</main>
 	</body>
