--- a/project2/templates/home.html
+++ b/project2/templates/home.html
@@ -29,7 +29,7 @@
 				<p>this is where my side bar will godsfadsfa dsfasdfa</p>
 			</div>
 			<div class="search-bar" align="center">
-				<input class="search-input" placeholder="Search Channels" align="center" type="text" name="search">
+				<input class="search-input" autocomplete="off" placeholder="Search Channels" align="center" type="text" name="search">
 			</div>
 			<div id="channels" class="channels">
 			</div>
