--- a/project2/templates/newChannel.html
+++ b/project2/templates/newChannel.html
@@ -29,7 +29,7 @@
 			</select>
 		</div>
 		<div>
-			<button class="create-btn" align="center">Create Channel</button>
+			<button id="chan-btn" class="create-btn" align="center">Create Channel</button>
 		</div>
 	</form>
 </div>
